[tool.poetry]
name = "snprimer"
version = "0.0.0"
description = ""
authors = ["Benoitdw <bw@oncodna.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
myvariant = "^1.0.0"
gget = "^0.3.11"
click = "^8.1.3"
bump2version = "^1.0.1"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
