[tool.poetry]
name = "SNPrimer"
version = "0.1.1"
description = "Small python library to search snp in primer by position or by sequence."
authors = ["Benoitdw <bw@oncodna.com>"]
readme = "README.md"
repository = "https://github.com/Benoitdw/SNPrimer"


[tool.poetry.dependencies]
python = "^3.11"
myvariant = "^1.0.0"
gget = "^0.3.11"
click = "^8.1.3"
pyfaidx = "^0.7.1"

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
